# proxy-switcher

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rc
.cargo/: config.toml
src/: config.rs  logger.rs  main.rs  network.rs  proxy.rs  state.rs  tray.rs
