[package]
name = "proxy-switcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.89"
config = "0.14.0"
chrono = "0.4.38"
env_logger = "0.11.5"
msgbox = "0.7.0"
network-interface = "2.0.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
sysinfo = "0.31.4"
tap = "1.0.1"
tokio = { version = "1.40.0", features = ["full"] }
tray-item = "0.10.0"
winreg = "0.52.0"

[build-dependencies]
embed-resource = "2.4.3"
# vcpkg = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4.3"

# [target.'cfg(target_env = "msvc")'.dependencies]
# vcpkg = "0.2"

# [package.metadata.vcpkg]
# dependencies = ["openssl"]
# git = "https://github.com/microsoft/vcpkg"
# rev = "2023.04.15"
